# operations-debs-contenttranslation-apertium-swe

./: AUTHORS  Makefile.am  Makefile.in  README  apertium-swe.pc.in  apertium-swe.swe.acx  apertium-swe.swe.rlx  apertium-swe.swe.tsx  apertium-swe_0.7.0~r69513.orig.tar.bz2.delta  apertium-swe_0.7.0~r69513.orig.tar.bz2.id  apertium-swe_0.8.0.orig.tar.gz.delta  apertium-swe_0.8.0.orig.tar.gz.id  configure  configure.ac  modes.xml  swe.prob
debian/: changelog  control  copyright
dev/: adj (5e).wiktionary-infl.speling  apertium-swe-dan.swe-dan.rlx  apertium-swe-dan.swe.comments.tsx  apertium-swe-dan.swe_old.tsx  apertium-swe.pre-saldo-swe.dix  vb.wiktionary-infl.speling  wiktionary-nouns.speling
dev/saldo/: maybe-missing-from-saldo  saldo-to-dix.py  scrape-paradigms.sh  swe-words-paradigms.txt
texts/: isbrytning.txt  isbrytning.vislcg.txt  kalmar.txt  udhr.txt
texts/puupankki/: puupankki.vislcg
